Fix icon align

--- a/sass/modules/_user_info.sass
+++ b/sass/modules/_user_info.sass
@@ -29,7 +29,7 @@
 			content: ""
 			display: inline-block
 			vertical-align: middle
-			margin-top: -3px
+			margin-top: -4px
 			margin-right: 10px
 			width: 21px
 			height: 21px
